# dc-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
devlog/: 2026-05-08.md  2026-05-11.md  template.md
docs/: architecture.md  design-standards.md  implementation-steps.md  requirements.md
hirehive/: config.py  llm.py  main.py
hirehive/agents/: applier.py  base.py  coordinator.py  interview_coach.py  matcher.py  offer_advisor.py  searcher.py
hirehive/hirehive_jobsearchagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
hirehive/models/: __init__.py  resume.py
hirehive/storage/: __init__.py  application_repo.py  engine.py  job_repo.py  offer_repo.py  resume_repo.py  schema.sql
hirehive/tools/: browser_tools.py  file_tools.py  registry.py  state_tools.py
hirehive/utils/: logger.py  text.py
hirehive_jobsearchagent.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
prompts/: applier.system.md  coordinator.system.md  interview_coach.system.md  matcher.system.md  offer_advisor.system.md  searcher.system.md
src/: config.py  llm.py  main.py
src/agents/: applier.py  base.py  coordinator.py  interview_coach.py  matcher.py  offer_advisor.py  searcher.py
src/job_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/models/: __init__.py  application.py  job.py  offer.py
src/storage/: __init__.py  application_repo.py  engine.py  job_repo.py  offer_repo.py  resume_repo.py
src/tools/: __init__.py  browser_tools.py  file_tools.py  registry.py  state_tools.py
