[project]
name = "job-assistant"
version = "0.1.0"
description = "全流程求职助手 Agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0",
    "playwright>=1.45.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27.0",
]

[project.scripts]
job-assistant = "src.main:main"
