[project]
name = "hirehive-jobsearchagent"
version = "0.1.0"
description = "HireHive — 全流程 AI 求职 Agent (Multi-Agent Job Search Pipeline)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0",
    "playwright>=1.45.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27.0",
]

[project.scripts]
hirehive = "src.main:main"
